fix top header alignment

--- a/styles/header.css
+++ b/styles/header.css
@@ -8,6 +8,7 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: right;
+    align-items: center;
     gap: 10px;
     padding: 0.75rem 10%;
     font-size: clamp(0.75rem, 1.5vw, 1rem);
